2009-08-15  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (unified_diff): escape output in this method just
	same as word_diff() does.
	* misc/plugin/rss.rb (rss_body): remove escape because
	unified_diff() will escape instead.

	* hiki.cgi: set Encoding::defailt_external if exists (for Ruby
	1.9). add :accept_charset parameter in CGI.new().

	* style/default/html_formatter.rb: remove a needless regexp
	option.

	* hiki/docdiff/view.rb (apply_style, apply_style_digest): use
	Array#join instead of Array#to_s, whose specification is different
	between Ruby 1.8 and Ruby 1.9.
	* hiki/util.rb (word_diff): ditto.

	* hiki/util.rb (unified_diff): use String#split(/^/) instead of
	String#to_a, that works on both (old) Ruby-1.8 and Ruby-1.9.

	* style/default/parser.rb (parse): use HikiDoc.to_html instead of
	HikiDoc#to_html.

2009-08-14  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (hiki_footer): display fcgi information in
	footer.

	* hiki/page.rb (process): use String#bytesize instead of
	String#size if exists.

	* hiki/config.rb (load_cgi_conf): call eval() with binding, that
	is required for Ruby 1.9.

	* hiki/db/ptstore.rb: define commit_new if missing, that is
	required for Ruby 1.9.

	* hiki/db/tmarshal.rb: use Array#join instead of Array#to_s, whose
	specification is different between Ruby 1.8 and Ruby 1.9.

2009-08-09  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.8 released!

2009-08-08  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (String): add a warning comment to notify that all
	instance methods added in String class will be obsoleted in the
	future release.

	* misc/plugin/amazon.rb: import tDiary's amazon.rb (rev.3501).

2009-08-05  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: use recent hikidoc.rb (rev.110).

2009-08-04  okkez  <okkez000@gmail.com>
	* misc/plugin/attach/attach.cgi: use dot instead of double colon
	when call singleton methods.

2009-08-01  Kazuhiko  <kazuhiko@fdiary.net>